# BBKEmu

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  sonar-project.properties
.github/workflows/: ci.yml  codeql-analysis.yml  nightly-build.yml  pages.yml  release.yml  sonar-report.yml
crates/bbkemu/: Cargo.toml
crates/bbkemu-core/: Cargo.toml
crates/bbkemu-core/examples/: test_cpu.rs
crates/bbkemu-core/src/: audio.rs  cheat.rs  cpu.rs  debug.rs  emulator.rs  font.rs  font_data.rs  gam.rs  input.rs  lcd.rs  lib.rs  memory.rs  model.rs  save.rs  syscall.rs
crates/bbkemu-core/src/syscalls/: audio.rs  bbkos.rs  file.rs  keyboard.rs  lcd.rs  misc.rs  mod.rs  string.rs  timer.rs
crates/bbkemu-core/tests/: smoke.rs
crates/bbkemu-hle-analyzer/: Cargo.toml
crates/bbkemu-hle-analyzer/src/: main.rs
crates/bbkemu-libretro/: Cargo.toml  bbkemu_libretro.info  build.rs
crates/bbkemu-libretro/src/: lib.rs
crates/bbkemu-rom-analyzer/: Cargo.toml
crates/bbkemu-rom-analyzer/src/: main.rs
crates/bbkemu/src/: main.rs
docs/: ARCHITECTURE.md  Android-Libretro-Core.md  CLI-Options.md  CONTRIBUTING.md  Core-Options.md  GAME-COMPATIBILITY.md  GAM_FORMAT.md  Release-Process.md  TESTED-GAMES.md  hle-mode-limitations.md  iOS-Libretro-Core.md
docs/archive/: ARCHITECTURE.md  MEMORY-MAP.md  README.md  SYSCALLS.md
site/: index.html
site/css/: style.css
site/js/: main.js
