[workspace]
members = [
    "crates/bbkemu-core",
    "crates/bbkemu",
    "crates/bbkemu-libretro",
    "crates/bbkemu-hle-analyzer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/jiangxincode/BBKEmu"

[workspace.dependencies]
# CPU emulator
mos6502 = "0.10"

# Serialization (save states)
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Standalone frontend
winit = "0.30"
softbuffer = "0.4"
cpal = "0.18"
clap = { version = "4", features = ["derive"] }
capstone = "0.14"
