[package]
name = "bbkemu-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BBK electronic dictionary game emulator core"

[dependencies]
mos6502 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }
