[package]
name = "bbkemu-libretro"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BBK electronic dictionary game emulator - libretro core"

[lib]
name = "bbkemu"
crate-type = ["cdylib"]

[dependencies]
bbkemu-core = { path = "../bbkemu-core" }
log = { workspace = true }
