[package]
name = "bbkemu-rom-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ROM analysis and reverse-engineering utilities for BBK emulation"

[[bin]]
name = "bbkemu-rom-analyzer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
capstone = { workspace = true }
clap = { workspace = true }
